[gd_scene load_steps=12 format=2]

[ext_resource path="res://Murmur/murmur.gd" type="Script" id=1]
[ext_resource path="res://Floater/flying_enemy.png" type="Texture" id=2]
[ext_resource path="res://Bullet/bullet.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="Animation" id=2]
length = 6.0
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3.47394 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.20357, 5.07305 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_pre_explode"
}, {
"args": [  ],
"method": "_die"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3.55, 4.32 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 6.75
loop = true
step = 0.25

[sub_resource type="Animation" id=4]
length = 1.25
loop = true
step = 0.25

[sub_resource type="CircleShape2D" id=5]
radius = 14.0

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.564972, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.915254, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 322.73
angular_velocity = 1.49184e-19
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.4
color_ramp = SubResource( 7 )

[node name="flying_enemy" type="RigidBody2D"]
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 4
script = ExtResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="shape1" type="CollisionShape2D" parent="."]
position = Vector2( -1.08072, -2.16144 )
shape = SubResource( 5 )

[node name="raycast_left" type="RayCast2D" parent="."]
position = Vector2( -33.2868, -9.34363 )
enabled = true
cast_to = Vector2( 0, 45 )

[node name="raycast_right" type="RayCast2D" parent="."]
position = Vector2( 29.1987, -9.34363 )
enabled = true
cast_to = Vector2( 0, 45 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.685843 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.86
draw_order = 4
process_material = SubResource( 8 )
texture = ExtResource( 3 )
